--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ p{
 
 body{
 
-    background-color: black;
+    background-color: yellow;
 
 }
 
@@ -45,4 +45,5 @@ border:10px;
 border-style: dashed;
 
 }
+
   
