--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ p{
 
 body{
 
-    background-color: yellow;
+    background-color: black;
 
 }
 
@@ -47,3 +47,4 @@ border-style: dashed;
 }
 
   
+
