--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 p{
 
-    color:greenyellow;
+    color:yellow;
    font-weight: bolder;
    font-size: x-large;
 
@@ -8,7 +8,7 @@ p{
 
    .amiri-regular {
     font-family: "Amiri", serif;
-    font-weight: 400;
+    font-weight: 300;
     font-style: normal;
   }
   
@@ -34,7 +34,7 @@ p{
 
 body{
 
-    background-color: black;
+    background-color: blueviolet;
 
 }
 
